[Mac] Update the Touch Bar for Default Search Engine changes

Currently, if the user changes the default search engine in
settings, the touch bar does not update to reflect the change.

To fix this issue, the BrowserWindowTouchBar is modified so
that it observers changes to the default search engine.

Tests: browser test BrowserWindowTouchBarTest.SearchEngineChanges

Bug: 696702
Change-Id: I92861aabf9ab2e87ba6d1d32fda975d9a10bdf26
Reviewed-on: https://chromium-review.googlesource.com/792034
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#519761}
Former-commit-id: fbf94922e7745093947ffc8c9d48029d11fcb605