chrome/browser/ui/cocoa/browser_window_touch_bar_browsertest.mm
@@ -7,7 +7,10 @@
 #include "chrome/browser/ui/browser_window.h"
 #import "chrome/browser/ui/cocoa/browser_window_controller.h"
 #import "chrome/browser/ui/cocoa/browser_window_touch_bar.h"
+#include "chrome/common/pref_names.h"
 #include "chrome/test/base/in_process_browser_test.h"
+#include "components/prefs/pref_service.h"
+#include "components/search_engines/search_engines_test_util.cc"
 #include "content/public/test/browser_test_utils.h"
 #include "content/public/test/test_utils.h"
 #include "testing/gtest_mac.h"
@@ -102,6 +105,29 @@ IN_PROC_BROWSER_TEST_F(BrowserWindowTouchBarTest, StarredChanges) {
 
     // The window should have a new touch bar.
     [browser_window_controller() setStarredState:YES];
+    EXPECT_NE(touch_bar, [window touchBar]);
+  }
+}
+
+// Tests if the touch bar gets invalidated if the default search engine has
+// changed.
+IN_PROC_BROWSER_TEST_F(BrowserWindowTouchBarTest, SearchEngineChanges) {
+  if (@available(macOS 10.12.2, *)) {
+    PrefService* prefs = browser()->profile()->GetPrefs();
+    DCHECK(prefs);
+
+    NSWindow* window = [browser_window_controller() window];
+    NSTouchBar* touch_bar = [browser_touch_bar() makeTouchBar];
+    [window setTouchBar:touch_bar];
+    EXPECT_TRUE([window touchBar]);
+
+    // Change the default search engine.
+    std::unique_ptr<TemplateURLData> data =
+        GenerateDummyTemplateURLData("poutine");
+    prefs->Set(DefaultSearchManager::kDefaultSearchProviderDataPrefName,
+               *TemplateURLDataToDictionary(*data));
+
+    // The window should have a new touch bar.
     EXPECT_NE(touch_bar, [window touchBar]);
   }
 }
